# Flashcard

./: CMakeLists.txt  README.md
data/: flashcards.txt
qml/: main.qml
src/: FlashHandler.cpp  FlashHandler.h  Flashcard.cpp  Flashcard.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h  StatsInfo.cpp  StatsInfo.h  StatsManager.cpp  StatsManager.h  User.cpp  User.h  main.cpp
